redo metric jobs to break into three. add runahead limit

--- a/MERRA2/cylc/conventional/suite.rc
+++ b/MERRA2/cylc/conventional/suite.rc
@@ -5,7 +5,8 @@
 [scheduling]
     initial cycle point = 20240501T00
     final cycle point = 20240601T00
-    
+    runahead limit = P1
+
     [[dependencies]]
         [[[P1M]]]  # Monthly cycling - runs 4 synoptic times per month
             graph = """
@@ -14,9 +15,9 @@
                 move_synop_12 => process_synop_12
                 move_synop_18 => process_synop_18
                 
-                process_synop_00 & process_synop_06 & process_synop_12 & process_synop_18 => metric_jobs
+                process_synop_00 & process_synop_06 & process_synop_12 & process_synop_18 => metric_obrate & metric_means & metric_rms
                 
-                metric_jobs => combine_synop_00 & combine_synop_06 & combine_synop_12 & combine_synop_18
+                metric_obrate & metric_means & metric_rms => combine_synop_00 & combine_synop_06 & combine_synop_12 & combine_synop_18
                 
                 combine_synop_00 & combine_synop_06 & combine_synop_12 & combine_synop_18 => combine_all_synop & hourly_jobs
             """
@@ -109,30 +110,62 @@
     [[process_synop_00, process_synop_06, process_synop_12, process_synop_18]]
         inherit = process_synop
 
-    [[metric_jobs]]
+[[metric_obrate]]
         script = """
         set -e
         set -x
-        metric_job_ids=()
-        YEAR_TABLE=$(echo ${CYLC_TASK_CYCLE_POINT} | cut -c 1-6)
-        SLURM_LOG_DIR=${CYLC_TASK_WORK_DIR}
         
-        # Run all three metrics sequentially
-        for metric in obrate means rms; do
-            echo "Processing metric: $metric for $YEAR_TABLE"
-            metric_job=$(sbatch --parsable -J ${YEAR_TABLE}.conv.${metric} -o ${SLURM_LOG_DIR}/${metric}.log --export=YEAR_TABLE=${YEAR_TABLE},METRIC=${metric} --nodes=1 --ntasks-per-node=1 --export=ALL --cpus-per-task=1 --time=1:30:00 ${SCRIPT_DIR}/process_conv_means.j $YEAR_TABLE  $metric)
-            metric_job_ids+=($metric_job)
-            echo "    - metric job: $metric_job"
-        done
-
-        metric_deps=$(IFS=':'; echo "${metric_job_ids[*]}")
-        for job_id in "${metric_job_ids[@]}"; do
-          while squeue -j $job_id >/dev/null 2>&1; do
-            sleep 300
-          done
-        done
-        echo "All $metric_deps jobs completed"
+        cd ${SCRIPT_DIR}
+        
+        YEAR_TABLE=$(echo ${CYLC_TASK_CYCLE_POINT} | cut -c 1-6)
+        
+        echo "Processing metric: obrate for $YEAR_TABLE"
+        ${SCRIPT_DIR}/process_conv_means.j $YEAR_TABLE obrate
         """
+        
+        [[[job]]]
+            batch system = slurm
+            execution time limit = PT2H
+        [[[directives]]]
+            --export = ALL
+
+    [[metric_means]]
+        script = """
+        set -e
+        set -x
+        
+        cd ${SCRIPT_DIR}
+        
+        YEAR_TABLE=$(echo ${CYLC_TASK_CYCLE_POINT} | cut -c 1-6)
+        
+        echo "Processing metric: means for $YEAR_TABLE"
+        ${SCRIPT_DIR}/process_conv_means.j $YEAR_TABLE means
+        """
+        
+        [[[job]]]
+            batch system = slurm
+            execution time limit = PT2H
+        [[[directives]]]
+            --export = ALL
+
+    [[metric_rms]]
+        script = """
+        set -e
+        set -x
+        
+        cd ${SCRIPT_DIR}
+        
+        YEAR_TABLE=$(echo ${CYLC_TASK_CYCLE_POINT} | cut -c 1-6)
+        
+        echo "Processing metric: rms for $YEAR_TABLE"
+        ${SCRIPT_DIR}/process_conv_means.j $YEAR_TABLE rms
+        """
+        
+        [[[job]]]
+            batch system = slurm
+            execution time limit = PT2H
+        [[[directives]]]
+            --export = ALL
 
     [[combine_synop]]
         script = """
