encountering issues w/processing script where it kicks back error that it can't read .bin files. not a problem in last runs. experimenting with sourcing nco and g5_modules to see if that solves it

--- a/MERRA2/cylc/conventional/suite.rc
+++ b/MERRA2/cylc/conventional/suite.rc
@@ -62,8 +62,9 @@
         inherit = move_synop
 
     [[process_synop]]
-        pre-script = "source $BIN_DIR/.g5_modules.sh"
+        pre-script = "source $BIN_DIR/.g5_modules.sh; module load nco"
         script = """
+        
         set echo
         
         cd ${SCRIPT_DIR}
